add hive support